@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-01T01:59:16Z",
-  "count" : 3,
+  "timestamp" : "2022-10-14T02:00:05Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
