@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-10-13T16:27:42Z",
+  "timestamp" : "2022-10-14T02:00:05Z",
   "count_outdated" : 581,
   "uniques_outdated" : 333,
   "count" : 602,
@@ -7,7 +7,7 @@
   "clones" : [
     {
       "timestamp": "2022-09-30T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -56,8 +56,8 @@
     },
     {
       "timestamp": "2022-10-13T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
