@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-09-30T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 1
     },
     {
@@ -39,7 +39,7 @@
     },
     {
       "timestamp": "2022-10-13T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
